vbnc/vbnc/vbnc/tests/Errors/30456-2.vb
Module bug
	Function Main () As Integer
		Global.What.Ever = true
	End Function
End Module
